[tool.poetry]
name = "xiv-pyshopper"
version = "0.1.0"
description = "A tool for getting housing item prices in FFXIV"
authors = ["Ashii"]
readme = "README.md"
packages = [{include = "xiv_pyshopper"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
